# rock

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  rock.cabal  stack.yaml
.github/workflows/: ci.yml
examples/: Spreadsheet.hs  Subquery.hs  SubqueryClasses.hs
src/: Examples.hs  Hashed.hs  Rock.hs  Task.hs  Traces.hs  VerifyingTraces.hs
src/Rock/: Core.hs  Examples.hs  HashTag.hs  Hashed.hs  Traces.hs
tests/: Main.hs
