name:                rock
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ollef/rock#readme
license:             BSD3
license-file:        LICENSE
author:              Olle Fredriksson
maintainer:          fredriksson.olle@gmail.com
copyright:           2018-2019 Olle Fredriksson
category:            Development
build-type:          Simple
extra-source-files:
                     README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wtabs
                       -funbox-strict-fields
  hs-source-dirs:      src
  exposed-modules:
                       Rock
                       Rock.Core
                       Rock.HashTag
                       Rock.Hashed
                       Rock.Traces
  build-depends:       base >= 4.7 && < 5
                     , dependent-map
                     , dependent-sum
                     , deriving-compat
                     , mtl
                     , transformers
                     , protolude
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/ollef/rock

flag examples
  Description: "Build examples"
  Default:     False
  Manual:      True

executable rock-spreadsheet
  if !flag(examples)
    buildable:         False
  main-is:             Spreadsheet.hs
  ghc-options:         -Wall
                       -threaded
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, rock, protolude, dependent-sum-template
