name:                rock
version:             0.2.0.0
synopsis:            A build system for incremental, parallel, and demand-driven computations
description:         See <https://www.github.com/ollef/rock> for more
                     information and
                     <https://github.com/ollef/rock/tree/master/examples> for
                     examples.
homepage:            https://github.com/ollef/rock#readme
license:             BSD3
license-file:        LICENSE
author:              Olle Fredriksson
maintainer:          fredriksson.olle@gmail.com
copyright:           2018-2019 Olle Fredriksson
category:            Development
build-type:          Simple
extra-source-files:
                     README.md
                     CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.3
                   , GHC == 8.6.5
                   , GHC == 8.8.3

library
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wtabs
                       -funbox-strict-fields
  hs-source-dirs:      src
  exposed-modules:
                       Rock
                       Rock.Core
                       Rock.Traces
  build-depends:       base >= 4.7 && < 5
                     , constraints-extras >= 0.3
                     , dependent-hashmap >= 0.1
                     , dependent-sum >= 0.6
                     , deriving-compat >= 0.5
                     , hashable >= 1.3
                     , lifted-base >= 0.2
                     , monad-control >= 1.0
                     , mtl >= 2.2
                     , transformers >= 0.5
                     , transformers-base >= 0.4
                     , unordered-containers >= 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/ollef/rock

flag examples
  Description: "Build examples"
  Default:     False
  Manual:      True

executable rock-spreadsheet
  if !flag(examples)
    buildable:         False
  main-is:             Spreadsheet.hs
  ghc-options:         -Wall
                       -threaded
  hs-source-dirs:      examples
  default-language:    Haskell2010
  build-depends:       base, rock, protolude, dependent-sum-template

test-suite test-rock
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wtabs
                       -funbox-strict-fields
  build-depends:       base >=4.7 && <5
                     , constraints
                     , constraints-extras
                     , dependent-hashmap
                     , dependent-sum
                     , hashable
                     , hedgehog
                     , mtl
                     , rock
                     , unordered-containers
  default-language:  Haskell2010
